--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
         "@types/node": "12.12.12",
         "@types/react": "16.9.13",
         "@types/react-dom": "16.9.4",
+        "@types/styled-components": "^4.4.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-icons": "^3.8.0",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "styled-components": "^4.4.1",
         "typescript": "3.7.2"
     },
     "scripts": {
@@ -35,6 +39,8 @@
         ]
     },
     "devDependencies": {
+        "@types/react-icons": "^3.0.0",
+        "@types/react-router-dom": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^2.9.0",
         "@typescript-eslint/parser": "^2.9.0",
         "babel-eslint": "^10.0.3",
