--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@types/react": "16.9.13",
         "@types/react-dom": "16.9.4",
         "@types/styled-components": "^4.4.0",
+        "polished": "^3.4.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^3.8.0",
