--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
         "@types/node": "12.12.12",
         "@types/react": "16.9.13",
         "@types/react-dom": "16.9.4",
+        "@types/react-redux": "^7.1.5",
+        "@types/redux": "^3.6.0",
         "@types/styled-components": "^4.4.0",
+        "axios": "^0.19.0",
         "polished": "^3.4.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^3.8.0",
+        "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "redux": "^4.0.4",
         "styled-components": "^4.4.1",
-        "typescript": "3.7.2"
+        "typescript": "3.7.2",
+        "use-async-effect": "^2.2.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -40,6 +46,7 @@
         ]
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/react-icons": "^3.0.0",
         "@types/react-router-dom": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^2.9.0",
