--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/redux": "^3.6.0",
         "@types/styled-components": "^4.4.0",
         "axios": "^0.19.0",
+        "immer": "^5.0.0",
         "polished": "^3.4.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
@@ -20,7 +21,7 @@
         "react-scripts": "3.2.0",
         "redux": "^4.0.4",
         "styled-components": "^4.4.1",
-        "typescript": "3.7.2",
+        "typescript": "3.7.3",
         "use-async-effect": "^2.2.1"
     },
     "scripts": {
@@ -60,6 +61,9 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^1.7.0",
-        "prettier": "^1.19.1"
+        "npm": "^6.13.2",
+        "package": "^1.0.1",
+        "prettier": "^1.19.1",
+        "redux-devtools-extension": "^2.13.8"
     }
 }
